#159 Fix burger menu not clickable due to overlaid element. Add extra padding to burger menu icon

--- a/arches_3d/arches_3d/media/css/nav.css
+++ b/arches_3d/arches_3d/media/css/nav.css
@@ -30,6 +30,14 @@
     height: 50px
 }
 
+.navbar-toggler {
+    z-index: 1;
+}
+
+.hamburger {
+    padding-top: 15px;
+}
+
 .navbar-collapse {
     float: left;
 }
